Inital revision of home work #3

--- a/.gitignore
+++ b/.gitignore
@@ -419,3 +419,5 @@ FodyWeavers.xsd
 /AdapterAndBridge.vcxproj
 /AdapterAndBridge[1]_tests.cmake
 /AdapterAndBridge[1]_include.cmake
+/AdapterAndBridge[1]_tests.cmake
+/AdapterAndBridge[1]_include.cmake
