Add genrating adapter classes #2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,9 @@ add_executable(
   source/ispaceship.hpp
   source/ccppfunctiondeclarationparser.hpp
   source/ccppfunctiondeclarationparser.cpp
-  source/testInterfaceFile.cpp
   source/testInterfaceFile.hpp
+  source/Adapter_testInterfaceFile.hpp
+  source/Adapter_testInterfaceFile.cpp
 
   source/tests/test_cCppFunctionDeclarationParser.cpp
   source/tests/test_cGenerateAdapter.cpp
